<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="title_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="shared_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>


    <string name="android_course_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="mail_address">dencharski@yandex.ru</string>
    <string name="mail_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="url_string">mailto:</string>
    <string name="intent_type">text/plain</string>
    <string name="error_internet_connection_text">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_text">Обновить</string>
    <string name="empty_result_text">Ничего не нашлось</string>
    <string name="you_search">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="collection_name_label">Альбом</string>
    <string name="release_date_label">Год</string>
    <string name="primary_genre_name_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="track_time_label">Длительность</string>
    
    <string name="selected_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="you_havent_created_a_single_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist_button_text">Создать</string>
    <string name="complete_playlist_title_text">Завершить создание плейлиста?"</string>
    <string name="complete_playlist_message_text">Все несохраненные данные будут потеряны</string>
    <string name="complete_playlist_netyralbutton_text">Отмена</string>
    <string name="complete_playlist_positivebutton_text">Завершить</string>
    <string name="tracks">" треков"</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="add_in_playlist_now">"Добавлено в плейлист "</string>
    <string name="track_was_add_in_playlist_before">"Трек уже добавлен в плейлист "</string>
    <string name="playlist_was_created">Плейлист %1$s создан</string>
    <string name="delete_track">Удалить трек</string>
    <string name="shure_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="negative">нет</string>
    <string name="positive">да</string>
    <string name="empty_tracklist_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="you_wont_delete_playlist">Хотите удалить плейлист?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_track_in_this_playlist">В этом плейлисте нет треков</string>
</resources>