<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/top_title_margin"
        android:layout_marginBottom="@dimen/bottom_title_margin"
        android:gravity="top"
        android:text="@string/title"
        android:textColor="@color/title_textColor"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:layout_marginBottom="@dimen/base_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/button_textColor"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/baseline_search_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/button_textColor" />

    <Button
        android:id="@+id/button_mediateka"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:layout_marginBottom="@dimen/base_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/mediateka"
        android:textAllCaps="false"
        android:textColor="@color/button_textColor"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/baseline_library_music_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/button_textColor" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:layout_marginBottom="@dimen/base_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/button_textColor"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/button_textColor"

        android:onClick="showToastForButtonSettings"
        />
    <!--
    :-) bad practice onClick in xml
-->


</LinearLayout>