<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search_fragment.ui.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_search_image"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_search"
            style="@style/SettingsTextViewItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_settings_menu_start"
            android:layout_marginTop="@dimen/margin_settings_menu_start"
            android:layout_marginEnd="@dimen/margin_settings_menu_bottom"
            android:layout_marginBottom="@dimen/margin_settings_menu_start"
            android:layout_weight="1"
            android:text="@string/search"
            android:textSize="@dimen/primary_text_size" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_settings_menu_start"
        android:layout_marginTop="@dimen/margin_search_layout_top_bottom"
        android:layout_marginEnd="@dimen/margin_settings_menu_start"
        android:layout_marginBottom="@dimen/margin_search_layout_top_bottom"
        app:cardCornerRadius="@dimen/margin_search_layout_top_bottom">

        <LinearLayout
            style="@style/SearchLayoutStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_search"
                style="@style/SearchImageViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_settings_menu_start"
                android:layout_marginTop="@dimen/margin_search_layout_top_bottom"
                android:layout_marginEnd="@dimen/margin_search_image"
                android:layout_marginBottom="@dimen/margin_search_layout_top_bottom"
                android:src="@drawable/baseline_search_24" />

            <EditText
                android:id="@+id/edit_text_search"
                style="@style/SearchEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_search_image"
                android:layout_marginTop="@dimen/margin_search_layout_top_bottom"
                android:layout_marginEnd="@dimen/margin_search_image"
                android:layout_marginBottom="@dimen/margin_search_layout_top_bottom"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLength="15"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/image_view_clear"
                style="@style/SearchImageViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_settings_menu_start"
                android:layout_marginTop="@dimen/margin_search_layout_top_bottom"
                android:layout_marginEnd="@dimen/margin_search_image"
                android:layout_marginBottom="@dimen/margin_search_layout_top_bottom"
                android:src="@drawable/baseline_clear_24"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/layout_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_track_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_settings_menu_bottom"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_empty_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_view_empty_result"
            style="@style/SearchItemTrackEmptyResultImageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            style="@style/SearchItemTrackTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_settings_menu_bottom"
            android:text="@string/empty_result_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_no_internet_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_view_no_internet_connection"
            style="@style/SearchItemTrackErrorInternetConnectionImageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/text_view_no_internet_connection"
            style="@style/SearchItemTrackTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_settings_menu_bottom"
            android:gravity="center"
            android:text="@string/error_internet_connection_text" />

        <Button
            android:id="@+id/button_refresh"
            style="@style/SearchItemTrackButtonRefreshStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/refresh_text"
            android:textSize="14sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_view_you_search"
            style="@style/SearchItemTrackTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_settings_menu_bottom"
            android:layout_weight="0"
            android:text="@string/you_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_track_list_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/button_clean_history"
            style="@style/SearchItemTrackButtonRefreshStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/clean_history" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ProgressBar
            android:id="@+id/progressbar_search"
            android:layout_width="@dimen/search_track_progressbar_size"
            android:layout_height="@dimen/search_track_progressbar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/player_small_gray_button_size"
            android:indeterminateTint="@color/main_background_color"
            />
    </FrameLayout>
</LinearLayout>