<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings_activity.ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_search_image"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_back_arrow"
            style="@style/SettingsImageViewBackArrowStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_settings_menu_start"
            android:layout_marginTop="@dimen/margin_settings_menu_start"
            android:layout_marginEnd="@dimen/margin_settings_menu_bottom"
            android:layout_marginBottom="@dimen/margin_settings_menu_start"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/text_view_settings"
            style="@style/SettingsTextViewItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/margin_settings_menu_end"
            android:layout_marginEnd="@dimen/margin_settings_menu_end"
            android:layout_marginBottom="@dimen/margin_settings_menu_end"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textSize="@dimen/primary_text_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_search_image"
        android:layout_marginTop="@dimen/bottom_title_margin"
        android:layout_marginEnd="@dimen/margin_search_image"
        android:layout_marginBottom="@dimen/margin_search_image"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_dark_theme"
            style="@style/SettingsTextViewItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_settings_menu_start"
            android:layout_marginTop="@dimen/margin_settings_menu_end"
            android:layout_marginEnd="@dimen/margin_settings_menu_end"
            android:layout_marginBottom="@dimen/margin_settings_menu_end"
            android:layout_weight="1"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_dark_theme"
            style="@style/SettingsLightDarkThemeSwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_shared_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_search_image"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_shared"
            style="@style/SettingsTextViewItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_settings_menu_start"
            android:layout_marginTop="@dimen/margin_settings_menu_end"
            android:layout_marginEnd="@dimen/margin_settings_menu_end"
            android:layout_marginBottom="@dimen/margin_settings_menu_end"
            android:layout_weight="1"
            android:text="@string/shared_app" />

        <ImageView
            android:id="@+id/image_view_share"
            style="@style/SettingsImageViewItemStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_settings_menu_top"
            android:layout_marginEnd="@dimen/margin_settings_menu_start"
            android:layout_marginBottom="@dimen/margin_settings_menu_bottom"
            android:src="@drawable/baseline_share_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_write_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_search_image"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_write_support"
            style="@style/SettingsTextViewItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_settings_menu_start"
            android:layout_marginTop="@dimen/margin_settings_menu_end"
            android:layout_marginEnd="@dimen/margin_settings_menu_end"
            android:layout_marginBottom="@dimen/margin_settings_menu_end"
            android:layout_weight="1"
            android:text="@string/write_support" />

        <ImageView
            android:id="@+id/image_view_write_support"
            style="@style/SettingsImageViewItemStyles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_settings_menu_top"
            android:layout_marginEnd="@dimen/margin_settings_menu_start"
            android:layout_marginBottom="@dimen/margin_settings_menu_bottom"
            android:src="@drawable/baseline_support_agent_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_search_image"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_user_agreement"
            style="@style/SettingsTextViewItemStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_settings_menu_start"
            android:layout_marginTop="@dimen/margin_settings_menu_end"
            android:layout_marginEnd="@dimen/margin_settings_menu_end"
            android:layout_marginBottom="@dimen/margin_settings_menu_end"
            android:layout_weight="1"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/image_view_user_agreement"
            style="@style/SettingsImageViewItemStyles"
            android:layout_width="@dimen/arrow_size"
            android:layout_height="@dimen/arrow_size"
            android:layout_marginTop="@dimen/margin_settings_menu_top"
            android:layout_marginEnd="@dimen/margin_settings_menu_start"
            android:layout_marginBottom="@dimen/margin_settings_menu_bottom"
            android:src="@drawable/baseline_arrow_forward_ios_24" />
    </LinearLayout>
</LinearLayout>