<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainActivityColorStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_playlist.ui.CreatePlaylistFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.95" />


    <ImageView
        android:id="@+id/image_view_back_arrow"
        style="@style/SettingsImageViewBackArrowStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_new_playlist"
        style="@style/SettingsTextViewItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textSize="@dimen/primary_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/image_view_back_arrow"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/image_view_playlist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="@dimen/margin_search_layout_top_bottom"
        android:scaleType="center"
        android:src="@drawable/baseline_add_photo_alternate_24"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


    <EditText
        android:id="@+id/edit_text_playlist_name"
        style="@style/CreatePlaylistEditTextTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_settings_menu_start"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/margin_settings_menu_start"
        android:background="@drawable/rectangle"
        android:hint="@string/playlist_name"

        android:imeOptions="actionDone"
        android:lines="1"
        android:maxLength="20"
        android:padding="@dimen/margin_settings_menu_start"
        android:singleLine="true"

        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/image_view_playlist_image" />

    <EditText
        android:id="@+id/edit_text_playlist_description"
        style="@style/CreatePlaylistEditTextTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_settings_menu_start"
        android:background="@drawable/rectangle"
        android:hint="@string/playlist_description"
        android:imeOptions="actionDone"
        android:maxLength="40"
        android:padding="@dimen/margin_settings_menu_start"

        app:layout_constraintBottom_toTopOf="@+id/button_create_playlist"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_playlist_name"

        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/text_view_hint_name"
        style="@style/CreatePlaylistTextViewHintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_search_layout_top_bottom"
        android:text="@string/playlist_name"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_playlist_name"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/image_view_playlist_image"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/text_view_hint_description"
        style="@style/CreatePlaylistTextViewHintStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_search_layout_top_bottom"
        android:text="@string/playlist_description"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_playlist_description"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_playlist_name"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/button_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:padding="@dimen/base_margin"
        android:text="@string/create_playlist_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_text_size"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/button_edit_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:padding="@dimen/base_margin"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>